# code-grading-system

./: .gitignore  QUICKSTART.md  README.md  prd.md  pyproject.toml  requirements.txt
.claude/commands/: plan.md
.claude/skills/: david-beazley-concurrency.skill  dudi-feedback.skill  guido-python.skill  kenneth-reitz-api.skill  martin-fowler-architecture.skill  shachar-feedback.skill  trump-feedback.skill  uncle-bob-clean.skill  wes-mckinney-data.skill
src/code_grading/: __init__.py  __main__.py  config.py
src/code_grading/agents/: __init__.py  base.py
src/code_grading/agents/agent1/: __init__.py  email_parser.py  gmail_client.py  runner.py
src/code_grading/agents/agent2/: __init__.py  code_analyzer.py  git_client.py  runner.py  worker.py
src/code_grading/agents/agent3/: __init__.py  feedback_strategy.py  llm_client.py  runner.py  template_loader.py
src/code_grading/agents/agent4/: __init__.py  email_builder.py  gmail_drafter.py  runner.py
src/code_grading/cli/: __init__.py  commands.py
src/code_grading/common/: __init__.py  excel_handler.py  logging.py  status.py
src/code_grading/orchestrator/: __init__.py  pipeline.py
templates/: email_template.html
templates/prompts/: dudi.txt  shachar.txt  standard.txt  trump.txt
tests/: conftest.py
